--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         <li><b>Soberania Petrolera</b></li>
         <li><b>PHP: </b>Basico</li>
         <li><b>Html: </b>Intermedio</li>
+        <li><b>CSS: </b>Intermedio</li>
+        <li><b>Javascript: </b>Intermedio</li>
+        <li><b>Manejo de Terminal </b></li>     
         <li><b>Manejo de Microsoft Word</b></li>
         <li><b>Manejo de Microsoft Excel</b></li>
       </ul>
